# Siphon

./: .gitignore  .leviathan_cache.db  PGRES_siphon.py.py  ProcessedFile.py  README.md  __init__.py  architecture.md  pyproject.toml  requirements.txt  setup.py  siphon.py
Siphon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
api/client/: siphon_client.py
api/server/: run.py  server_audio.py  server_enrich.py  server_video.py
assets/: New-Year-New-Skills-Own-Your-Career-Goals.pptx  Talent Management Sources.docx  download.html  monthly-cert-insights (14).csv
audio/: audio.py  combine.py  diarize.py  example.py  format.py  system_message.jinja2  transcribe.py
audio/server/: transcription_server.py
cli/: cli_params.py  implicit_input.py  record_cli.py  siphon.py  siphon_cli.py  siphonserver_cli.py
client/: siphon_client.py
collections/: design_spec.md  monad_implementation.md  test_collections.py
collections/corpus/: __init__.py  processed_corpus.py  processed_library.py  siphon_corpus.py  sourdough.py
collections/query/: siphon_query.py  snapshot.py
config/: setup_notes.md
context/: context_classes.py
context/classes/: article_context.py  audio_context.py  doc_context.py  drive_context.py  email_context.py  ephemeral_context.py  github_context.py  image_context.py  obsidian_context.py  text_context.py  video_context.py  youtube_context.py
converter/: notes.md
corpus/: notes.md  processed_corpus.py
data/: ContentID.py  Context.py  ContextCall.py  IDHash.py  Metadata.py  ProcessedContent.py  ProcessedContentDisplay.py  ProcessedContentSchema.md  ProcessedFile.py  SourceType.py  SyntheticData.py  URI.py  extensions.py
data/types/: SourceType.py  URISchemes.py
database/: PGRES_siphon.py  snapshot.py
database/chroma/: Chroma_curate.py
database/fallback/: fallback_manager.py  sync_queue.py
database/interfaces/: cache_interface.py
database/neo4j/: notes.md
database/pgvector/: vector_db.py
database/postgres/: PGRES_connection.py  PGRES_processed_content.py  PGRES_siphon.py  migrate.py
database/sqlite/: manual_sync.py  snapshot_sqlite3.py  sqlite_cache.py  sync_check.py
design/: business_case.md  user_journeys.md
enrich/: generate_description.py  generate_summary.py  generate_title.py  test_runner.py
ingestion/: create_siphon.py  file_context.py  ingest.py  online_context.py  pyproject.toml  retrieve.py  siphon.py
ingestion/article/: download_article.py  retrieve_article.py
ingestion/articles/: download_article.py  retrieve_article.py
ingestion/audio/: audio.py  clean.py  combine.py  convert.py  diarize.py  format.py  local_transcript.py  notes.md  openai_transcript.py  retrieve_audio.py  transcribe.py
ingestion/audio/record/: play.py  record.py
ingestion/github/: flatten_cli.py  flatten_directory.py  flatten_url.py  flatten_xml.py  notes.md  retrieve_github.py
ingestion/googledrive/: retrieve_google_doc.py
ingestion/image/: describe_image_with_cloud.py  describe_image_with_ollama.py  display.py  image.py  ollama_image.py  retrieve_image.py
ingestion/obsidian/: vault.py
ingestion/todo/: notes.md
ingestion/youtube/: download_youtube_transcript.py  format_youtube.py  retrieve_youtube.py
logs/: logging_config.py
main/: ingest.py  siphon.py
metadata/: __init__.py  article_metadata.py  drive_metadata.py  email_metadata.py  file_metadata.py  github_metadata.py  metadata_classes.py  notes.md  obsidian_metadata.py  todo_metadata.py  youtube_metadata.py
metadata/classes/: article_metadata.py  audio_metadata.py  doc_metadata.py  drive_metadata.py  email_metadata.py  github_metadata.py  image_metadata.py  obsidian_metadata.py  text_metadata.py  todo_metadata.py  video_metadata.py  youtube_metadata.py
projects/sourdough/: notes.md
projects/sourdough/datadog/: agents.md  aieng_talk.md  datadog.py  future.md  (+2 more)
prompts/: enrich_description.jinja2  enrich_summary.jinja2  enrich_title.jinja2  format_transcript.jinja2  generate_description.jinja2  synthetic_data_prompts.py
prompts/synthetic_data/: article_title.jinja2  audio_description.jinja2  audio_summary.jinja2  audio_title.jinja2  doc_summary.jinja2  email_description.jinja2  email_summary.jinja2  ephemeral_summary.jinja2  github_description.jinja2  github_title.jinja2  image_description.jinja2  image_summary.jinja2  obsidian_description.jinja2  synthetic_data_prompts.py  video_description.jinja2  video_summary.jinja2  youtube_description.jinja2  youtube_summary.jinja2  youtube_title.jinja2
scripts/: flatten_cli.py  obsidian_cli.py  ocr_cli.py  peek_cli.py  play_cli.py  record_cli.py  research_cli.py  siphonserver_cli.py  summarize_cli.py  youtube_cli.py
server/: client.py  context_call.py  run.py  server_audio.py  server_enrich.py  server_image.py
src/siphon/: __init__.py
synthetic_data/: synthetic_data_classes.py
synthetic_data/classes/: article_synthetic_data.py  audio_synthetic_data.py  doc_synthetic_data.py  drive_synthetic_data.py  email_synthetic_data.py  ephemeral_synthetic_data.py  github_synthetic_data.py  image_synthetic_data.py  obsidian_synthetic_data.py  text_synthetic_data.py  video_synthetic_data.py  youtube_synthetic_data.py
tests/: .test_minimal_cache.db  test_context.py  test_display.py  test_flatten.py  test_integration.py  test_local.py  test_metadata.py  test_minimal_siphon.py  test_uri.py  test_youtube.py
tests/audio/: test_audio.py  test_diarize.py  test_transcribe.py
tests/fixtures/: ;  assets.py  example_ProcessedContent.py  example_files.py  example_html.html
tests/image/: test_image.py
tests/uri/: test_uri.py
uri/: uri_classes.py
uri/classes/: __init__.py  article_uri.py  audio_uri.py  doc_uri.py  drive_uri.py  email_uri.py  ephemeral_uri.py  github_uri.py  image_uri.py  obsidian_uri.py  text_uri.py  video_uri.py  youtube_uri.py
whisper/: audio.rttm  diarization.py  format_transcript.py  integration.py  main.py  munge.py  munge_chain.py  transcription_with_timestamps.json  whisper.py
(+134 files in other folders)
