[project]
name = "Siphon"
version = "0.1.0"
description = "An evolution of Leviathan - flexible media to LLM context converter with RAG capabilities"
requires-python = ">=3.12,<3.13"
dependencies = [
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.0",
    "openai>=1.0.0",
    # Audio processing
    # "pyaudio>=0.2.11",  # Requires: sudo apt install portaudio19-dev
    "pydub>=0.25.1",
    "pyannote.audio>=3.0.0",
    # Document processing
    "markitdown>=0.0.1a2",
    "mammoth>=1.6.0",
    # Web scraping & APIs
    "newspaper3k>=0.2.8",
    "youtube-transcript-api>=0.6.0",
    "yt-dlp>=2023.7.6",
    "requests>=2.28.0",
    # Database & storage
    "psycopg2-binary>=2.9.0",
    "chromadb>=0.4.0",
    # Vector operations & reranking
    "rerankers>=0.3.0",
    # Web framework
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    # Data validation & utilities
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    # Google APIs (for Drive integration)
    "google-api-python-client>=2.80.0",
    "google-auth>=2.16.0",
    "google-auth-oauthlib>=1.0.0",
    "torch",
    "torchvision",
    "torchaudio",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pre-commit>=3.0.0",
]

# CUDA-specific packages (user can install as extras)
cuda126 = [
    "torch>=2.6.0",
    "torchvision>=0.21.0", 
    "torchaudio>=2.6.0",
    "nvidia-cuda-runtime-cu12>=12.6",
]

cuda121 = [
    "torch>=2.6.0", 
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "nvidia-cuda-runtime-cu12>=12.1",
]

# Specialized features
vision = [
    "opencv-python>=4.5.0",
    "pillow>=9.0.0",
]

# All optional features
all = [
    "Siphon[dev,vision]",
]

[project.scripts]
siphon = "Siphon.ingestion.siphon:main"
record = "Siphon.ingestion.audio.record.record:main"
play = "Siphon.ingestion.audio.record.play:main"
siphonserver = "Siphon.server.run:main"
flatten = "Siphon.ingestion.github.flatten_cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["Siphon*"]

# Note: PyTorch CUDA packages will be installed manually with --index-url
# See installation instructions in README

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0", 
    "flake8>=4.0.0",
    "mypy>=0.950",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# MyPy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pyaudio.*",
    "pydub.*",
    "pyannote.*",
    "newspaper.*",
    "youtube_transcript_api.*",
    "yt_dlp.*",
    "chromadb.*",
    "rerankers.*",
    "ollama.*",
]
ignore_missing_imports = true
