[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Siphon"
version = "0.1.0"
description = "An evolution of Leviathan - flexible media to LLM context converter with RAG capabilities"
requires-python = ">=3.12,<3.13.4"
dependencies = [
    "pydantic",
    "fastapi",
    "uvicorn",
    "requests",
    "rich",
    "chromadb",
    "sentence-transformers",
    "rerankers",
    "psycopg2",
    "youtube-transcript-api",
    "newspaper3k",
    "markitdown",
    "pyaudio",
    "pydub",
    "torch==2.7.1",
    "transformers",
    "pyannote.audio",
    "ollama",
    "openai",
    "google-genai",
]

[project.scripts]
siphon = "Siphon.cli.siphon_cli:main"
# record = "Siphon.ingestion.audio.record.record:main"
record = "Siphon.cli.record_cli:main"
# play = "Siphon.ingestion.audio.record.play:main"
play = "Siphon.cli.play_cli:main"
# siphonserver = "Siphon.server.run:main"
siphonserver = "Siphon.cli.siphonserver_cli:main"
# flatten = "Siphon.ingestion.github.flatten_cli:main"
flatten = "Siphon.cli.flatten_cli:main"
youtube = "Siphon.cli.youtube_cli:main"

[tool.pytest.ini_options]
addopts = "-v -s --tb=short --no-header --showlocals --pdb -x"
log_cli = true
log_cli_level = "INFO"

# Hatchling configuration (replaces setuptools.packages.find)
[tool.hatch.build.targets.wheel]
packages = ["Siphon"]
