[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Siphon"
version = "0.1.0"
description = "An evolution of Leviathan - flexible media to LLM context converter with RAG capabilities"
requires-python = ">=3.12,<3.13.4"
dependencies = [
    "pydantic",
    "fastapi",
    "uvicorn",
    "requests",
    "rich",
    "chromadb",
    "sentence-transformers",
    "rerankers",
    "psycopg2",
    "youtube-transcript-api",
    "newspaper3k",
    "markitdown[all]",
    "pyaudio",
    "pydub",
    "torch==2.7.1",
    "transformers",
    "pyannote.audio",
    "ollama",
    "openai",
    "google-genai",
]

[project.scripts]
siphon = "Siphon.cli.siphon_cli:main"
record = "Siphon.script.record_cli:main"
play = "Siphon.scripts.play_cli:main"
siphonserver = "Siphon.scripts.siphonserver_cli:main"
flatten = "Siphon.scripts.flatten_cli:main"
youtube = "Siphon.scripts.youtube_cli:main"

[tool.pytest.ini_options]
addopts = "-v -s --tb=short --no-header --showlocals --pdb -x"
log_cli = true
log_cli_level = "INFO"

# Hatchling configuration (replaces setuptools.packages.find)
[tool.hatch.build.targets.wheel]
packages = ["Siphon"]
